fix: align

--- a/static/style.less
+++ b/static/style.less
@@ -44,6 +44,7 @@
 					display: block;
 					overflow: hidden;
 					margin-top: 2px;
+					text-align: left;
 				}
 				.timeago {
 					color: @gray-light;
